fix broken inheritance of margin css, fixes #5

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,10 @@ figure figcaption{
     clear: both;
 }
 
+.gallerythumb {
+    margin: 0 0 0 0;
+}
+
 figure {
     margin: 0;
 }
